tests/models/enum/unnamed/u8/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2)]
        u8
    ),
}
fn main() {}
