tests/models/enum/unnamed/u8/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2.0)]
        u8
    ),
}
fn main() {}
